freelancer-k8s/minikube/freelancer-kibana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freelance-kiba
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: freelance-kiba
  ports:
    - name: freelance-kiba
      port: 5601
      targetPort: 5601
      protocol: TCP
