freelancer-k8s/minikube/freelancer-kibana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: kibana.freelancerapp.com
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: freelance-kiba
                port:
                  number: 5601
